<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_project">

    <fragment
        android:id="@+id/navigation_project"
        android:name="io.github.melkyfb.workshare.ui.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="io.github.melkyfb.workshare.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="io.github.melkyfb.workshare.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>